--- a/src/index.css
+++ b/src/index.css
@@ -1,18 +1,18 @@
 @import url('https://fonts.googleapis.com/css2?family=Inter+Tight:ital,wght@0,100..900;1,100..900&display=swap');
 
 :root {
-  font-family: 'Inter', 'Times New Roman';
+  font-family: 'Inter', sans-serif;
 }
 
 .welcomeMsg {
   text-align: left;
   margin: 2vw 10vw;
-  font-weight: bold;
-  font-size: x-large;
+  font-weight: 700;
+  font-size: xx-large;
 }
 
 body {
-  font-family: 'Inter Tight';
+  font-family: 'Inter', sans-serif;
   display: block;
   /* place-items: center; */
   min-width: 320px;
@@ -36,6 +36,33 @@ body {
   text-align: left;
   margin-left: 9vw;
 }
+
+.card {
+  margin: 2vw 10vw 0vw;
+}
+
+.list-group-item {
+  text-align: left;
+  margin: 1vh 2vw;
+}
+
+.text-danger {
+  text-align: center;
+  font-size: large;
+}
+
+.buttons {
+  margin: 1.25vw 9.5vw;
+  display: flex;
+  justify-content: space-around;
+}
+
+.btn {
+  padding-left: 12px;
+  margin-left: 12px;
+  margin-right: 12px;
+}
+
 
 
 /* h1 {
